# academic-paper-processing-pipeline

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
archive/: README.md  convert_pdfs_to_mds.py
scripts/: chunk_quality_classifier.py  convert_pdfs.py  convert_pdfs_to_docling.py  rename_by_citekey.py  upload_docling_to_pinecone.py  upload_mds_to_pinecone_by_paragraphs.py  upsert_vectors.py
